# TCPAsio

./: .gitignore  CMakeLists.txt  Modèle CRA SEPTEMBRE 2023 - 02.xlsx  Modèle RUO SEPTEMBRE 2023.xlsx  README.md  UWB.C  UWB_BLE.C  bleak_read_write.py  nfc_owner_pairing.c
TCPAsioClient/: CMakeLists.txt  main.cpp
TCPAsioNetworking/: CMakeLists.txt
TCPAsioNetworking/include/TCPAsioNetworking/client/: tcp_client.h
TCPAsioNetworking/include/TCPAsioNetworking/server/: tcp_connection.h  tcp_server.h
TCPAsioNetworking/src/client/: tcp_client.cpp
TCPAsioNetworking/src/server/: tcp_connection.cpp  tcp_server.cpp
TCPAsioServer/: CMakeLists.txt  main.cpp
