cmake_minimum_required(VERSION 3.19)
SET (VERSION_MAJOR 1)
SET (VERSION_MINOR 0)
SET (VERSION_FEATURE 0)
SET (VERSION_PATCH 0)
SET (VERSION "${VERSION_MAJOR}.${VERSION_MINOR}")
SET (VERSION "${VERSION}.${VERSION_FEATURE}.${VERSION_PATCH}")
MESSAGE ("Version: ${VERSION}")
set(CMAKE_CXX_STANDARD 20)
project(TCPAsioClient VERSION ${VERSION} LANGUAGES C CXX)

# MESSAGE ("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
# MESSAGE ("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
# MESSAGE ("CMAKE_CURRENT_LIST_FILE: ${CMAKE_CURRENT_LIST_FILE}")
# MESSAGE ("CMAKE_CURRENT_LIST_LINE: ${CMAKE_CURRENT_LIST_LINE}")
# MESSAGE ("CMAKE_INCLUDE_CURRENT_DIR: ${CMAKE_INCLUDE_CURRENT_DIR}")
# MESSAGE ("CMAKE_PARENT_LIST_FILE: ${CMAKE_PARENT_LIST_FILE}")

add_executable(${PROJECT_NAME} main.cpp)

target_include_directories(${PROJECT_NAME}
        PUBLIC
            TCPAsioNetworking
)

target_link_libraries(${PROJECT_NAME}
        PUBLIC
            TCPAsioNetworking
)